demo-ch04-network-policy/webserver/base/webserver-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webserver
spec:
  host: 
  port:
    targetPort: 8080
  to:
    kind: Service
    name: webserver
    weight: 100
  wildcardPolicy: None
